prepare for repackage

--- a/pyCCDA/pyproject.toml
+++ b/pyCCDA/pyproject.toml
@@ -8,7 +8,7 @@ version = "1.0.0"
 description = "CCDA Parser for Python 3"
 readme = "README.md"
 authors = [
-    {name = "Mansoor Alam", email = "me@mansooralam.com"}
+    {name = "Mansoor Alam", email = "me@mansooralam.com"}, {name = "Yanjing Wang"}
 ]
 license = {text = "MIT"}
 classifiers = [
@@ -24,7 +24,18 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
 requires-python = ">=3.6"
+dependencies = [
+    "lxml>=4.6.0",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=6.0.0",
+    "flake8>=3.8.0",
+    "twine>=3.4.0",
+    "build>=0.7.0",
+]
 
 [project.urls]
-"Homepage" = "https://github.com/mansooralam/pyCCDA"
-"Bug Tracker" = "https://github.com/mansooralam/pyCCDA/issues"
+"Homepage" = "https://github.com/man-soor/ccda-parser"
+"Bug Tracker" = "https://github.com/man-soor/ccda-parser/issues"
