--- a/pyCCDA/pyproject.toml
+++ b/pyCCDA/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pyCCDA"
-version = "1.0.0"
+version = 2.0.0"
 description = "CCDA Parser for Python 3"
 readme = "README.md"
 authors = [
